--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "general contractors",
   "main": "app.js",
   "scripts": {
+    "start": "NODE_ENV=production n app.js",
+    "dev": "nodemon app.js",
     "compile:sass": "node-sass public/sass/main.scss public/css/style.css -w"
   },
   "author": "Eduardo Aviles",
@@ -17,6 +19,10 @@
   },
   "homepage": "https://github.com/eddieaviles357/JandMGeneral#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
