--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.16",
     "validator": "^13.1.17"
   },
   "devDependencies": {
