--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "general contractors",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=production n app.js",
+    "start": "NODE_ENV=production n node app.js",
     "dev": "nodemon app.js",
     "compile:sass": "node-sass public/sass/main.scss public/css/style.css -w"
   },
@@ -27,5 +27,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
+  },
+  "engines" : {
+    "node" : "14.x"
   }
 }
